src/Components/Signup/Signup.css
.signupParentDiv {
    border: 1px solid black;
    width: max-content;
    padding: 30px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 6px;
    background-color: rgba(0,0,0,.75);
  }
  
  .signupParentDiv .input {
    border-top-color: transparent;
    border-left-color: transparent;
    border-right-color: transparent;
    outline-color: transparent;
    font-size: 21px;
    border-radius: 6px;
    border: none;
    padding: 11px;
    margin: 4px;
  }
  
  .signupParentDiv button {
    width: 100%;
    height: 48px;
    /* border-color: transparent; */
    background-color: red;
    color: whitesmoke;
    font-weight: 900;
    border: none;
    border-radius: 6px;
  }
  .signupParentDiv button:hover {
    background-color: white;
    color: #002f34;
    border: 2px solid #002f34;
  }
  
  .signupParentDiv a {
    display: flex;
    justify-content: center;
    cursor: pointer;
  }
  .label{
    color: white;
  }
  .header-text{
    color: white;
    font-size: 32px;
    margin: 7px;
  }
  .backgroud-image{
    background-image: url(https://assets.nflxext.com/ffe/siteui/vlv3/5dd45df7-33f1-4274-97ea-e9c6aca69dad/ed1cb962-411d-4e43-bad2-33f07ae8e341/IN-en-20211108-popsignuptwoweeks-perspective_alpha_website_small.jpg);
    height: 814px;
    width: 100%;
    opacity: 0.5;
  }
  

